src/assets/scss/framework/base/footer/_footer.scss
//== Import footer configuration
@import "config";

// Styling for footer
#footer {
    margin: 0 #{-$wrapper-padding-x};
    padding: $footer-padding-top $footer-padding-x $footer-padding-bottom;
    text-align: center;
    position: relative;

    @include before-after {
        @include pseudoContent;
        z-index: 0;
    }

    &:before {
        @include absolute(top 0 right 0 bottom 0 left 0);
        background-color: rgba($white, .7);
    }

    &:after {
        @include absolute(top 0 right 0 left 0);
        height: 15rem;
        background: linear-gradient(to bottom, rgba($white, 1) 0%, rgba($white, 0) 100%);
    }

    .footer-content {
        position: relative;
        z-index: 1;
    }

    .footer-copy{
        @include absolute(bottom 1rem right 0 left 0);
        width: 100%;
        z-index: 1;
    }

    .footer-copy a{
        width: auto;
    }

    .email {
        font-weight: map-get($font-weight, light);
        font-size: 3rem;
        display: inline-block;
        margin-bottom: 2rem;
    }
}

// Styling for platform buttons
.platform-btn-inline {
    margin-right: -.25rem;
    margin-left: -.25rem;

    div{
        width: auto;
    }
}

.install-btn{    
    border-radius: 7px;
    font-weight: 700;
    margin-right: .5rem;
    margin-left: .5rem;
    img{
        height: 15px !important;
        width: 20px !important;
        width: auto;
        display: initial !important;
        vertical-align: middle;
        margin-right: 5px;
        animation: install-wiggle 3s infinite;
    }
}

@keyframes install-wiggle {
	0% {
		transform: translateY(0) scale(1)
	}
	60% {
		transform: translateY(0) scale(1)
	}
	75% {
		transform: translateY(0) scale(1.12)
	}
	80% {
		transform: translateY(0) scale(1.1)
	}
	84% {
		transform: translateY(-10%) scale(1.1)
	}
	88% {
		transform: translateY(10%) scale(1.1)
	}
	92% {
		transform: translateY(-10%) scale(1.1)
	}
	96% {
		transform: translateY(10%) scale(1.1)
	}
	100% {
		transform: translateY(0) scale(1)
    }
}

.platform-btn {
    border-radius: .5rem;
    margin-right: .25rem;
    margin-left: .25rem;

    @include icons-style {
        @include icon-size(2.5rem);
        display: inline-block;
        vertical-align: middle;
    }

    .platform-btn-info {
        display: inline-block;
        vertical-align: middle;
        text-align: left;

        span {
            display: block;
        }

        .platform-name {
            font-weight: map-get($font-weight, medium);
            margin-top: .325rem;
            text-transform: uppercase;
        }
    }
}

//== Responsive styles
@include custom-media-breakpoint-down(479px) {
    #footer .email {
        font-size: 2rem;
        margin-bottom: 1rem;
    }

    .platform-btn, .install-btn {
        display: table;
        margin-right: auto;
        margin-left: auto;

        + .platform-btn, + .install-btn  {
            margin-top: 1rem;
        }
    }
}

